--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ before_install:
   - go get github.com/mitchellh/gox
   - go get github.com/tcnksm/ghr
 after_success:
-  - gox -output "dist/{.OS}_{.Arch}_{.Dir}"
+  - gox -osarch "darwin/amd64 windows/amd64 linux/amd64 linux/arm" -output="dist/{{.Dir}}_{{.OS}}_{{.Arch}}"
   - ghr --username yuu --token $GITHUB_TOKEN --replace --prerelease --debug pre-release dist/
